# Memnex

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adapter-example.md  bug_report.md
docs/: release-v0.1.0.md  release-v0.2.0.md  release-v0.3.0.md  security-and-redaction.md
examples/: claude-adapter.md  codex-memory-sync.md  cursor-rules.md  mcp-memory-export.md
memory-data/: manifest.json
memory-data/current/agent-skills/memory/: SKILL.md
memory-data/current/exports/: memory-export-latest.json
memory-data/current/memories/: raw_memories.md
memory-data/current/memories/rollout_summaries/: 2026-06-07T09-50-17-Xrp2-openradioss_thin_plate_acceleration_reporting.md
memory-data/current/preferences/: config.redacted.toml
memory-data/current/rules/: default.rules
memory-data/current/skills/chinese-docx/: SKILL.md  pyproject.toml
memory-data/current/skills/chinese-docx/references/: cjk-openxml.md  template-first.md
memory-data/current/skills/chinese-docx/tests/: test_inspect.py  test_repair.py
memory-data/current/skills/chinese-docx/tests/fixtures/: build_fixtures.py
memory-data/current/skills/chinese-docx/tools/chinese_docx/: __init__.py  cli.py  inspect.py  openxml.py  repair.py
memory-data/current/templates/: iteration-output-template.md  memory-iteration-layered-output-template.md
memory-system/: README.md
memory-system/scripts/: install-weekly-task.ps1  sync-memory-library.ps1
memory-system/tools/graph-viewer/: export_graph_viewer.py
(+1228 files in other folders)
