[project]
name = "chinese-docx-tools"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "lxml>=5.2.0",
  "python-docx>=1.1.2"
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0"
]

[project.scripts]
chinese-docx = "chinese_docx.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "tools"}

[tool.setuptools.packages.find]
where = ["tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tools"]
